--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,6 @@
-# Python 2.7 Backend Requirements
-Flask==1.0.2  # Last version supporting Python 2.7
-flask-cors==3.0.9
-python-cassandra==0.22.0  # Python driver for Cassandra
-pyjwt==1.7.1  # For authentication tokens
-werkzeug==0.16.1
-gunicorn==19.10.0  # Last version supporting Python 2.7
+Flask==1.0.2  # Última versión compatible con Python 2.7
+flask-cors==3.0.9  # Para manejar CORS (Intercambio de Recursos de Origen Cruzado)
+python-cassandra==0.22.0  # Controlador para la base de datos Cassandra
+pyjwt==1.7.1  # Para generación de tokens de autenticación
+werkzeug==0.16.1  # Utilidades WSGI (servidor web)
+gunicorn==19.10.0  # Última versión compatible con Python 2.7 (servidor de producción)
